<resources>
    <string name="APP_ID_FACEBOOKE">443047462572938</string>
    <string name="app_name">Shanti</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_maps">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_user">CreateUserActivity</string>
    <string name="title_activity_main_login">MainLoginActivity</string>
    <string name="title_activity_search_def">SearchDefActivity</string>
    <string name="title_activity_sign_in_end">SignInEndActivity</string>
    <string name="title_activity_proffile_def">ProffileDefActivity</string>
    <string name="title_activity_end_registration">EndRegistrationActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_add_group">AddGroupActivity</string>
    <string name="title_activity_group_details">GroupDetailsActivity</string>
    <string name="title_activity_my_profile">MyProfileActivity</string>
    <string name="title_activity_message_received">Consts</string>
    <string name="noConnectionNetwork">שגיאה בקבלת נתונים מהשרת, בדוק חיבורי רשת</string>
    <string name="noConnection">אין חיבור לאינטרנט</string>
    <string name="noServer">תקלה זמנית בשרת, נסה מאוחר יותר</string>
    <string name="dateBeforeToday">לא ניתן לבחור תאריך גדול מהיום</string>
    <string name="loading">טוען...</string>
    <string name="chooseImage">בחר תמונה</string>
    <string name="chooseImageCamera">מצלמה</string>
    <string name="chooseImageGallery">גלריה</string>
    <string name="chooseImageCancel">ביטול</string>
    <string name="oneGroup">קבוצות</string>
    <string name="allGroup">כולם</string>
    <string name="ifYouExit">האם אתה רוצה לעזוב את שאנטי?</string>
    <string name="exitYes">כן</string>
    <string name="exitNo">לא</string>
    <string name="myProfile">הפרופיל שלי</string>
    <string name="myProfileEdit">ערוך</string>
    <string name="myProfileClose">סגור</string>
    <string name="myProfileDetails">פרטים אישיים</string>
    <string name="myProfilePersonalProfile">פרופיל אישי</string>
    <string name="myProfileCompletesDetails">פרטים משלימים</string>
    <string name="myProfileEmail">מייל</string>
    <string name="myProfilePassword">סיסמה</string>
    <string name="myProfileFirstName">שם פרטי</string>
    <string name="myProfileLastName">שם משפחה</string>
    <string name="myProfilePhone">נייד</string>
    <string name="myProfileCountry">ארץ מגורים</string>
    <string name="myProfileLanguage">שפה</string>
    <string name="myProfileJob">מקצוע</string>
    <string name="myProfileHobby">תחביב</string>
    <string name="myProfileMoreInfo">עוד על עצמך</string>
    <string name="myProfileRequiredField">יש להזין טלפון, ארץ מגורים, מגדר, שפה דת ותאריך לידה</string>
    <string name="myProfileUpdateError">ארעה שגיאה, הנתונים לא נשמרו</string>
    <string name="myProfileUpdateSuccess">השינויים נשמרו</string>
    <string name="personalAreaMyProfile">הפרופיל שלי</string>
    <string name="personalAreaSearchPeopleSettings">הגדרות חיפוש משתמשים</string>
    <string name="personalAreaSearchInfoSettings">הגדרות חיפוש מידע</string>
    <string name="personalAreaInfoSettings">הגדרות תצוגת מידע</string>
    <string name="personalAreaLogOut">התנתקות</string>
    <string name="personalArea">איזור אישי</string>
    <string name="personalAreaMyPicture">התמונות שלי</string>
    <string name="addGroupLoadViewsError">בעיה בטעינת הפקדים</string>
    <string name="addGroupTitle">יצירת קבוצה חדשה</string>
    <string name="addGroupName">שם הקבוצה</string>
    <string name="addGroupMoreInfo">משהו נוסף...</string>
    <string name="addGroupPublic">קבוצה כללית</string>
    <string name="addGroupPrivate">קבוצה פרטית</string>
    <string name="addGroupChooseImage">בחר תמונה לקבוצה</string>
    <string name="addGroupChooseOtherImage">בחר תמונה אחרת</string>
    <string name="addGroupAddFriends">צרף חברים:</string>
    <string name="addGroupCreateGroup">צור קבוצה</string>
    <string name="addGroupNoExistEmail">כתובת מייל לא קיימת</string>
    <string name="addGroupNoAttachEmail">לא ניתן לצרף את החבר המבוקש</string>
    <string name="addGroupCreateNewGroupFail">שגיאה ביצירת הקבוצה</string>
    <string name="addGroupIconLocation">&#xf041;</string>
    <string name="addGroupIconAddMember">&#xf234;</string>
    <string name="addGroupIconRemoveMember">&#xf00d;</string>
    <string name="addGroupSearchTextRequired">הזן טקסט לחיפוש</string>
    <string name="errorRemoveUserFromGroupQb">תקלה בשרת QB , לא ניתן להסיר חבר מהקבוצה</string>
    <string name="errorRemoveGroupFromQB">תקלה בשרת QB ,לא ניתן למחוק את הקבוצה</string>
    <string name="groupsEmptyList">אין לך קבוצות כעת.\nהתחל ביצירת קבוצות.</string>
    <string name="groupsCreateGroup">צור קבוצה חדשה</string>
    <string name="groupsTitle">קבוצות</string>
    <string name="groupsNewGroup">קבוצה חדשה</string>
    <string name="groupErrorNameGroup">יש להזין שם לקבוצה</string>
    <string name="groupsMap">מפה</string>
    <string name="groupsDetails">פרטי הקבוצה:</string>
    <string name="groupsAddFriends">צרף חברים</string>
    <string name="groupsMeetingPoint">נקודת מפגש</string>
    <string name="groupsAddMoreFriends">+ צרף עוד חברים</string>
    <string name="groupsShantiName">שם שאנטי</string>
    <string name="groupsSearchGroup">חפש קבוצה</string>
    <string name="groupsSharePhoto">שתף תמונות</string>
    <string name="groupsIconCamera">&#xf030;</string>
    <string name="groupsIconAngleLeft">&#xf104;</string>
    <string name="groupsIconAngleRight">&#xf105;</string>
    <string name="groupsMoreAbout">עוד על קבוצת </string>
    <string name="groupsIconPoints"><b>&#xf141;</b></string>
    <string name="groupsSendMessage"><b>שלח בקשה</b></string>
    <string name="groupChatIsNotAvailable">הסטורית ההודעות לא נטענה</string>
    <string name="groupChatIsNotAvailableRetry">נסה שנית</string>
    <string name="Location">ישראל</string>
    <string name="events">ארועים</string>
    <string name="coupons">קופונים</string>
    <string name="more_about_the_group">עוד משהו על הקבוצה..</string>
    <string name="groupDeleteIcon">&#xf014;</string>
    <string name="approvalJoinYouRequests">מבקשת לצרף אותך לקבוצה</string>
    <string name="approvalEmptyList">אין לך בקשות הצטרפות כעת</string>
    <string name="approvalOK">אשר</string>
    <string name="approvalGroup">קבוצת</string>
    <string name="approvalCancellation">דחה</string>
    <string name="approvalJoinRequests">בקשות הצטרפות</string>
    <string name="approvalJoinRequest">בקשת הצטרפות</string>
    <string name="approvalGroups">קבוצות</string>
    <string name="approvalApproval1">קבוצת</string>
    <string name="approvalApproval2">מבקשת לצרף אותך אליה</string>
    <string name="groupProfile">פרופיל קבוצה</string>
    <string name="groupProfileSaveChanges">שמור שינויים</string>
    <string name="groupProfileEdit">ערוך</string>
    <string name="groupEditLoadViewsError">בעיה בטעינת הפקדים</string>
    <string name="groupEditRemoveGroup">&#xf00d;</string>
    <string name="groupEditRemoveMember">מחק</string>
    <string name="groupEditImageDelete">מחק</string>
    <string name="groupEditImage">בחר תמונה לקבוצה:</string>
    <string name="groupEditImageReplace">החלף</string>
    <string name="groupEditImageRetake">צלם שוב</string>
    <string name="groupEditMoreAbout">עוד משהו על הקבוצה:</string>
    <string name="groupEditUpdateError">ארעה שגיאה במהלך העדכון</string>
    <string name="groupEditUpdateSuccess">פרטי הקבוצה עודכנו</string>
    <string name="groupEditRemoveError">אירעה שגיאה במהלך המחיקה</string>
    <string name="groupEditRemoveDialogMessage">למחוק את הקבוצה?</string>
    <string name="groupEditRemoveDialogOK">מחק</string>
    <string name="groupEditRemoveDialogCancel">ביטול</string>
    <string name="profileGroupTitle">קבוצת %1$s</string>
    <string name="profileGroupDesc">קבוצה %1$s | %2$d חברים | %3$d בקשות הצטרפות</string>
    <string name="profileGroupMoreInfo">עוד משהו על הקבוצה..</string>
    <string name="profileGroupFriends">החברים</string>
    <string name="profileGroupSharedImages">תמונות משותפות</string>
    <string name="profileGroupMemberAttach">הצטרף %1$s</string>
    <string name="profileGroupAttachIn"> הצטרף ב</string>
    <string name="profileGroupGroupManager">מנהל הקבוצה</string>
    <string name="addMembersSearchHint">חפש לפי שם או שם שאנטי</string>
    <string name="addMembersSearchIcon">&#xf002;</string>
    <string name="addMembersAttach">צרף חברים</string>
    <string name="addMembersNoMembers">אין לך חברים בקבוצה</string>
    <string name="addMembersAttachNum"> שלחת בקשה ל %1$d חברים</string>
    <string name="addMembersTheUserReceivedARequestToJoin">המשתמש קבל בקשת הצטרפות</string>
    <string name="addMembersTheUserDoesntReceivedARequestToJoin">המשתמש לא קבל בקשת הצטרפות</string>
    <string name="addMembersPlusIcon">&#xf0c0;</string>
    <string name="addMembersSendAsk">שלח בקשה</string>
    <string name="addMembersDelete">&#xf00d;</string>
    <string name="splashNoInternetConnection">אין חיבור לאינטרנט, לא ניתן להמשיך</string>
    <string name="splashNoInternetOk">הגדרות</string>
    <string name="userInfoText">חבר ב %1$d קבוצות ומנהל %2$d קבוצות</string>
    <string name="signInBack">&#xf104;</string>
    <string name="mainLoginChooseOption">בחר באחת מהאפשרויות כדי להתחבר</string>
    <string name="mainLoginFacebook">facebook</string>
    <string name="mainLoginGooglePluse">Google+</string>
    <string name="loginPersonalDetails">פרטים אישיים</string>
    <string name="loginEmail">מייל</string>
    <string name="loginPassword">סיסמה</string>
    <string name="loginShantiName">שם משתמש</string>
    <string name="loginCellphone">נייד</string>
    <string name="loginLastName">שם משפחה</string>
    <string name="loginFirstName">שם פרטי</string>
    <string name="loginContinue">המשך</string>
    <string name="useTermsText1">בהרשמה לשאנטי אני מסכים לכל </string>
    <string name="signUpCountry">ארץ מגורים</string>
    <string name="signUpBirthDate">תאריך לידה</string>
    <string name="signUpCountrySearchHint">חפש...</string>
    <string name="takePhotoWelcome">ברוך הבא,</string>
    <string name="takePhotoComment">אנשים אוהבים להכיר את חבריהם לקבוצה.\nהשלם את עריכת הפרופיל שלך כדי לעזור לקבוצה להכיר אותך.</string>
    <string name="takePhotoTackPicture">צלם תמונה</string>
    <string name="takePhotoChooseFile">בחר מתוך מאגר</string>
    <string name="takePhotoAddPictureLater">הוסף מאוחר יותר</string>
    <string name="takePhotoYesAndFinish">כן. השלם הרשמה</string>
    <string name="takePhotoCaptureAgain">צלם שוב</string>
    <string name="moreInfoSubTitle">השלם את הפרופיל שלך.</string>
    <string name="moreInfoJob">מקצוע או תחום עיסוק</string>
    <string name="moreInfoHobby">תחביב</string>
    <string name="moreInfoMoreDetails">עוד פרטים</string>
    <string name="moreInfoComment">ספר למשתמשים שבקבוצתך על הטיולים שלך. האם יש משהו שאתה מתעניין בו במיוחד?\nהאם יש משהו משמעותי בחייך שאתה רוצה לחלוק אותו איתם?</string>
    <string name="moreInfoFinish">סיום</string>
    <string name="userPrefNote">בחר את מאפיני החברים שתרצה להכיר</string>
    <string name="userPrefCountry">ארץ מגורים</string>
    <string name="userPrefAge">גיל</string>
    <string name="userPrefReligion">דת</string>
    <string name="userPrefRadius">רדיוס</string>
    <string name="userPrefOk">אישור</string>
</resources>