<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="webit.android.shanti.main.personal.MyProfileActivity">


        <ImageView
            android:id="@+id/upImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <webit.android.shanti.customViews.CustomEditText
            android:id="@+id/myProfileEmail"
            style="@style/general_editText"
            android:hint="@string/myProfileEmail"
            android:inputType="textEmailAddress" />

        <webit.android.shanti.customViews.CustomEditText
            android:id="@+id/myProfilePassword"
            style="@style/general_editText"
            android:hint="@string/myProfilePassword"
            android:inputType="textEmailAddress" />

        <webit.android.shanti.customViews.CustomEditText
            android:id="@+id/myProfileFirstName"
            style="@style/general_editText"
            android:hint="@string/myProfileFirstName"
            android:inputType="textEmailAddress" />

        <webit.android.shanti.customViews.CustomEditText
            android:id="@+id/myProfileLastName"
            style="@style/general_editText"
            android:hint="@string/myProfileLastName"
            android:inputType="textEmailAddress" />

        <webit.android.shanti.customViews.CustomEditText
            android:id="@+id/myProfilePhone"
            style="@style/general_editText"
            android:hint="@string/myProfilePhone"
            android:inputType="textEmailAddress" />

        <webit.android.shanti.customViews.CustomAutoComplete
            android:id="@+id/myProfileCountry"
            style="@style/general_AutoComplete"
            android:visibility="gone"
            android:hint="@string/signUpCountry" />

        <FrameLayout
            android:id="@+id/myProfileBirthDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <webit.android.shanti.customViews.CustomTextView
                android:id="@+id/myProfileTextBirthDate"
                style="@style/general_AutoComplete"
                android:text="@string/signUpBirthDate" />
        </FrameLayout>

        <webit.android.shanti.customViews.MultiSpinner
            android:id="@+id/myProfileLanguage"
            style="@style/general_AutoComplete" />

        <webit.android.shanti.customViews.MultiSpinner
            android:id="@+id/myProfileGender"
            style="@style/general_AutoComplete" />

        <webit.android.shanti.customViews.MultiSpinner
            android:id="@+id/myProfileReligion"
            style="@style/general_AutoComplete"
            android:background="@drawable/white_block" />

        <webit.android.shanti.customViews.MultiSpinner
            android:id="@+id/myProfileLevelReligion"
            style="@style/general_AutoComplete" />

        <webit.android.shanti.customViews.CustomEditText
            android:id="@+id/myProfileJob"
            style="@style/general_editText"
            android:hint="@string/myProfileJob"
            android:inputType="textEmailAddress" />

        <webit.android.shanti.customViews.CustomEditText
            android:id="@+id/myProfileHobby"
            style="@style/general_editText"
            android:hint="@string/myProfileHobby"
            android:inputType="textEmailAddress" />


    </LinearLayout>
</ScrollView>
