<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="webit.android.shanti.login.signin.EndRegistrationActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <webit.android.shanti.customViews.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:text="@string/moreInfoSubTitle"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginEnd="-10dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingEnd="10dp">

                <webit.android.shanti.customViews.CustomEditText
                    android:id="@+id/moreInfoJob"
                    style="@style/general_AutoComplete"
                    android:layout_marginTop="10dp"
                    android:hint="@string/moreInfoJob" />

                <webit.android.shanti.customViews.CustomEditText
                    android:id="@+id/moreInfoHobby"
                    style="@style/general_AutoComplete"
                    android:hint="@string/moreInfoHobby" />

                <!--<webit.android.shanti.customViews.MultiSpinner-->
                    <!--android:id="@+id/moreInfoLanguages"-->
                    <!--style="@style/general_AutoComplete"-->
                    <!--app:multi_spinner_type="multi" />-->

                <webit.android.shanti.customViews.CustomEditText
                    android:id="@+id/moreInfoArea"
                    style="@style/general_editText"
                    android:layout_height="100dp"
                    android:layout_gravity="right|top"
                    android:gravity="top"
                    android:hint="@string/moreInfoMoreDetails"
                    android:padding="10dp"
                    android:scrollbars="vertical"
                    android:singleLine="false"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />
            </LinearLayout>
        </ScrollView>

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:orientation="vertical">-->

        <webit.android.shanti.customViews.CustomTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/moreInfoComment"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <webit.android.shanti.customViews.CustomButton
            android:id="@+id/moreInfoEndBtn"
            style="@style/general_button"
            android:layout_marginTop="15dp"
            android:text="@string/moreInfoFinish" />
        <!-- </LinearLayout>-->
    </LinearLayout>


</LinearLayout>
    </ScrollView>
</RelativeLayout>
